Set the correct app name

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Starter</title>
-    <meta key="title" content="React Starter" property="og:title" />
+    <title>Disc Golf Putting League</title>
+    <meta key="title" content="Disc Golf Putting League" property="og:title" />
     <meta
       key="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
